Add the color picker module

--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "core-js": "^2.5.4",
     "enhanced-resolve": "^3.3.0",
     "moment": "^2.22.2",
+    "ngx-color-picker": "^6.6.0",
     "rxjs": "^6.0.0",
     "zone.js": "^0.8.26"
   },
